k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raglens-frontend
  namespace: raglens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raglens-frontend
  template:
    metadata:
      labels:
        app: raglens-frontend
    spec:
      containers:
        - name: frontend
          image: souravsrinivas2912/raglens-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
