k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raglens-ingress
  namespace: raglens
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - host: ssgudl.shop
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: raglens-backend-svc
                port:
                  number: 8003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raglens-frontend-svc
                port:
                  number: 80
